# vnix

./: .gitattributes  .gitignore  Cargo.toml  PROGRESS.md  README.md  build.sh  flash.sh  run.sh
content/: vnix.store
doc/: chatgpt.md  vnix-alpha-0.1.md
scripts/: font2unit.py  img2unit.py  vid2unit.py
src/: content.rs  main.rs
src/driver/: linux.rs  mod.rs  stub.rs  uefi.rs
src/vnix/: content.rs  mod.rs  utils.rs
src/vnix/core/: driver.rs  kern.rs  mod.rs  msg.rs  serv.rs  task.rs  unit.rs  unit2.rs  user.rs
src/vnix/serv/: gfx.rs  io.rs  math.rs  mod.rs  test.rs  time.rs
src/vnix/serv/dat/: gen.rs  mod.rs  proc.rs
src/vnix/serv/etc/: chrono.rs  fsm.rs  mod.rs
src/vnix/serv/gfx/: gfx2d.rs  mod.rs
src/vnix/serv/io/: db.rs  mod.rs  store.rs  term.rs
src/vnix/serv/io/term/: base.rs  content.rs  help.rs  media.rs  mod.rs  text.rs  tui.rs  ui.rs
src/vnix/serv/io/term/ui/: media.rs  mod.rs  text.rs  win.rs
src/vnix/serv/math/: calc.rs
src/vnix/serv/sys/: hw.rs  mod.rs  task.rs  usr.rs
src/vnix/serv/test/: dump.rs  echo.rs  mod.rs  void.rs
src/vnix/serv/time/: chrono.rs
