[package]
name = "vnix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = {version = "0.19.0", features = ["alloc"]}
uefi-services = "0.16.0"
# heapless = "0.7.16"
sha2 = {version = "0.10.6", default-features = false, features = ["force-soft"]}
p256 = {version = "0.11.1", default-features = false, features=["ecdsa"]}
rand = {version = "0.8.5", default-features = false, features = ["std_rng"]}
sha3 = {version = "0.10.6", default-features = false}
lazy_static = {version = "1.4.0", default-features = false, features = ["spin_no_std"]}
compression = {version = "0.1.5", default-features = false, features = ["gzip"]}
base64ct = {version = "1.5.3", default-features = false, features = ["alloc"]}
libm = "0.2.6"
spin = "0.9.5"